# Chaussette

./: Cargo.toml  README.md  TODO.txt
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src/api/: api.rs  mod.rs  models.rs
client/src/net/: net.rs
proto/src/: proto.rs
server/: Cargo.toml
server/src/: main.rs
server/src/api/: api.rs
server/src/utils/: utils.rs
