[package]
name="client"
version="0.1.0"
edition="2021"

[[bin]]
name="client"
path="src/main.rs"

#[lib]
#name="client_lib"
#path="src/lib.rs"

[dependencies]
http = "1.3.1"
reqwest.workspace=true
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
tokio.workspace=true
proto = { path = "../proto" }
