[package]
name="server"
version="0.1.0"
edition="2021"

[[bin]]
name="server"
path="src/main.rs"

[dependencies]
threadpool.workspace = true
reqwest.workspace=true
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
tokio.workspace=true
lazy_static = "1.5.0"
proto = { path = "../proto" }
